--- a/index.css
+++ b/index.css
@@ -102,7 +102,7 @@ button{
     .container{
         width: 100%;
     height: 100%;
-    background-color: antiquewhite;
+    background-color: white;
     border: 1px solid #ccc;
     box-sizing: border-box;
    margin-top: 0px;
